--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,6 +24,12 @@
   color: white;
 }
 
+.registration-form {
+  max-width: 1000px;
+  padding: 50px;
+  margin: 100px;
+}
+
 .App-link {
   color: #61dafb;
 }
