US#51 Task#63 Created Page to input new appointment details.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,6 +35,11 @@ body {
   padding: 50px;
   margin: 100px;
 }
+.set-appointment-form {
+  max-width: 1000px;
+  padding: 50px;
+  margin: 100px;
+}
 
 .App-link {
   color: #61dafb;
