--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-@import '~antd/dist/antd.css';
+/* @import '~antd/dist/antd.css';
 
 .App {
   text-align: left;
@@ -89,4 +89,160 @@ body {
 }
 .login-form {
 
+} */
+
+@import '~antd/dist/antd.css';
+
+.App {
+  text-align: left;
+}
+
+body {
+  background-color: #EEE2DC;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.registration-form {
+  max-width: 1000px;
+  padding: 50px;
+  margin: 100px;
+  position: relative;
+  left: 500px;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.demo-loadmore-list {
+  min-height: 350px;
+}
+
+.button-login {
+  margin-left: 1100px;
+  min-height: 50px;
+  min-width: 500px;
+}
+
+.button-register {
+  min-height: 50px;
+  min-width: 500px;
+}
+
+.ant-layout-content {
+  background: "#FFC627";
+}
+
+.location-map {
+  width: 320px;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
+}
+
+.login-form {
+  max-width: 500px;
+  padding: 50px;
+  border: 3px solid gray;
+  margin: 100px;
+}
+.login-form-forgot {
+  float: right;
+}
+.login-form-button {
+  width: 100%;
+}
+.login-form {
+
+}
+
+.caseworker-homeless-registration-button {
+  width: 50%;
+  height: 60px;
+  border-radius: 4px;
+  border: 2px solid #4CAF50; /* Green */
+  position:relative;
+  top:50%; 
+  left:25%;
+  right: 50%;
+}
+
+.caseworker-homeless-registration-button:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
+}
+
+.caseworker-homeless-field {
+  padding: 100px;
+  margin: 100px;
+}
+
+.personId-form {
+  width: 80%;
+  height: 50px;
+  margin-left: 200px;
+}
+
+.personId-form-input {
+  padding: 100px;
+  margin: 100px;
+}
+.ant-calendar-picker {
+  width: 100%;
+}
+
+.page-header .ant-page-header-heading .ant-avatar-image {
+  width: 300px;
+}
+
+.registration-submit-button {
+  width: 300px;
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.ant-col-sm-offset-8 {
+  margin-left: 0%;
+}
+
+.ant-form-item-control{
+  line-height: 50px;
+}
+
+::placeholder {
+  font-size: 16px;
+}
+
+.personId-form .ant-form-item-control-wrapper .ant-form-item-control{
+  margin-left: 150px;
 }
