US#105 Task#123 --Added new fields to set appointment page.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -216,6 +216,7 @@ body {
   background: #3fb0ac;
   margin-left: 24%;
   margin-top: 8%;
+  margin-bottom: 24%;
   max-width: 800px;
   background-color: #fff;
   border: 5px solid #fae596;
