US#132 Task#144 -Increased Width of LoginForm -UI fix and name not displayed BugFix in Greeter Page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -83,7 +83,7 @@ body {
   border: 5px solid #fae596;
   /* margin: 100px; */
   background-color: #fff;
-  
+  width: 100%;
 }
 .login-form-forgot {
   float: right;
