--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,256 +1,288 @@
 @import '~antd/dist/antd.css';
 
 .App {
-  text-align: left;
+    text-align: left;
 }
 
 body {
-  font-size: 12px;
+    font-size: 12px;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .registration-form {
-  max-width: 1000px;
-  padding: 50px;
-  margin: 100px;
-  position: relative;
-  left: 200px;
+    max-width: 1000px;
+    padding: 50px;
+    margin: 100px;
+    position: relative;
+    left: 200px;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .demo-loadmore-list {
-  min-height: 350px;
+    min-height: 350px;
 }
 
 .button-login {
-  margin-left: 1100px;
-  min-height: 50px;
-  min-width: 500px;
+    margin-left: 1100px;
+    min-height: 50px;
+    min-width: 500px;
 }
 
 .button-register {
-  min-height: 50px;
-  min-width: 500px;
+    min-height: 50px;
+    min-width: 500px;
 }
 
-.ant-layout-content {
-  background: "#FFC627";
-}
 
 .location-map {
-  width: 320px;
-  padding: 10px;
-  border: 5px #dddfd4;
-  margin: 0;
+    width: 320px;
+    padding: 10px;
+    border: 5px #dddfd4;
+    margin: 0;
 }
 
-.site-layout-content .login-form {
-  max-width: 500px;
-  padding: 50px;
-  border: 5px solid #fae596;
-  margin: 100px;
-  background-color: #fff;
-  
-}
-.login-form-forgot {
-  float: right;
-}
+
+/*.login-form-forgot {*/
+/*    float: right;*/
+/*}*/
+
 .login-form-button {
-  width: 100%;
+    width: 100%;
 }
+
 .login-form {
 
 }
 
 .caseworker-homeless-registration-button {
-  width: 50%;
-  height: 60px;
-  border-radius: 4px;
-  border: 2px solid #4CAF50; /* Green */
-  position:relative;
-  top:50%; 
-  left:25%;
-  right: 50%;
+    width: 50%;
+    height: 60px;
+    border-radius: 4px;
+    border: 2px solid #4CAF50; /* Green */
+    position: relative;
+    top: 50%;
+    left: 25%;
+    right: 50%;
 }
 
 .caseworker-homeless-registration-button:hover {
-  background-color: #4CAF50; /* Green */
-  color: white;
+    background-color: #4CAF50; /* Green */
+    color: white;
 }
 
 .caseworker-homeless-field {
-  padding: 100px;
-  margin: 100px;
+    padding: 100px;
+    margin: 100px;
 }
 
 .personId-form {
-  width: 80%;
-  height: 50px;
-  margin-left: 200px;
+    width: 80%;
+    height: 50px;
+    margin-left: 200px;
 }
 
 .personId-form-input {
-  background: #3fb0ac;
-  margin-left: 24%;
-  margin-top: 16%;
-  max-width: 800px;
-  background-color: #fff;
-  border: 5px solid #fae596;
-  
+    background: #3fb0ac;
+    margin-left: 24%;
+    margin-top: 16%;
+    max-width: 800px;
+    background-color: #fff;
+    border: 5px solid #fae596;
+
 }
+
 .ant-calendar-picker {
-  width: 100%;
+    width: 100%;
 }
 
 .page-header .ant-page-header-heading .ant-avatar-image {
-  width: 300px;
+    width: 300px;
 }
 
 .registration-submit-button {
-  width: 300px;
-  margin-left: 50px;
-}
-.edit-appointment-button {
-  width: 100px;
-  margin-left: 10px;
-}
-.ant-col-sm-offset-8 {
-  margin-left: 0%;
+    width: 300px;
+    margin-left: 50px;
 }
 
-.ant-form-item-control{
-  line-height: 50px;
+.edit-appointment-button {
+    width: 100px;
+    margin-left: 10px;
+}
+
+.ant-col-sm-offset-8 {
+    margin-left: 0%;
+}
+
+.ant-form-item-control {
+    line-height: 50px;
 }
 
 ::placeholder {
-  font-size: 16px;
+    font-size: 16px;
 }
 
-.personId-form .ant-form-item-control-wrapper .ant-form-item-control{
-  margin-left: 100px;
+.personId-form .ant-form-item-control-wrapper .ant-form-item-control {
+    margin-left: 100px;
 }
 
-.logo {
-  /* margin-left: -2%; */
-  width: 10vh;
-  height: 10vh;
-  float: left;
-  padding: 1% 1% 0.05% 0%;
-}
-
-
-.site-layout-header {
-  height: 11vh;
-  width: 100%;
-  background-color: #173e43;
-}
 
 .site-layout-sider {
-  background-color: #173e43;
-  flex: 0 0 250px !important;
-  max-width: 250px !important;
-  min-width: 250px !important;
-  width: 250px !important;
+    background-color: #001529;
 }
 
-.content{
-  padding: 50px 50px;
-  background-color: #3fb0ac;
-  height: 1023px;
+
+.logo {
+    float: left;
+    padding: 0.1%;
+    height: 90%;
 }
 
-.site-layout-content {
-  background: #3fb0ac;
-  margin-left: 31%;
-  margin-top: 10%;
+.footer-style {
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #f0f9ff;
+    height: 8vh;
+    font-size: 11px;
+}
+
+.site-layout-header {
+    height: 8vh;
+    width: 100%;
+    background-color: #001529;
+    text-align: right;
+    padding-left: 1.5%;
+    padding-top: 0.1%;
+    padding-right: 1%;
+    border-bottom: 5px solid #0f4d92;
+}
+
+.homebutton {
+    font-size: 3vh;
+    color: #f0f9ff;
+    float: right;
+    padding-top: 0.1%;
+    height: 80%;
+}
+
+.content-login {
+    background-color: #0f4d92;
+    height: 84vh;
+    padding: 10%;
+    text-align: center;
+}
+
+.content-enroll {
+    background-color: #0f4d92;
+    padding: 2%;
+    height: 84vh;
+}
+
+.content-register {
+    background-color: #0f4d92;
+    height: 84vh;
+    padding: 2%;
+    text-align: center;
+}
+
+.site-layout-content-login {
+    background: #f0f9ff;
+    padding: 2% 5%;
+    display: inline-block;
+    min-width: 30vw;
+    border-radius: 8px;
+}
+
+.site-layout-content-homeless {
+
 }
 
 .site-layout-content-registration {
-  background: #3fb0ac;
-  margin-left: 32%;
-  max-width: 800px;
-  background-color: #fff;
-  border: 5px solid #fae596;
-  
+    background: #E8F1F2;
+    padding: 5%;
+    display: inline-block;
+    min-width: 30vw;
+    border-radius: 8px;
 }
 
-.site-layout-content-registration-client{
-  background: #3fb0ac;
-  margin-left: 24%;
-  max-width: 800px;
-  background-color: #fff;
-  border: 5px solid #fae596;
-  
+.site-layout-content-registration-client {
+    background: #3fb0ac;
+    margin-left: 24%;
+    max-width: 800px;
+    background-color: #fff;
+    border: 5px solid #fae596;
+
 }
-.site-layout-content-setappointment {
-  background: #3fb0ac;
-  margin-left: 24%;
-  margin-top: 8%;
-  margin-bottom: 24%;
-  max-width: 800px;
-  background-color: #fff;
-  border: 5px solid #fae596;
-  
-}
+
+/*.site-layout-content-setappointment {*/
+/*    background: #3fb0ac;*/
+/*    margin-left: 24%;*/
+/*    margin-top: 8%;*/
+/*    margin-bottom: 24%;*/
+/*    max-width: 800px;*/
+/*    background-color: #fff;*/
+/*    border: 5px solid #fae596;*/
+
+/*}*/
 
 .site-layout-content-viewappointment {
-  background: #3fb0ac;
-  margin-top: 2%;
-  background-color: #fff;
-  border: 5px solid #fae596;
-}
-.register-ant-form-item {
-  margin-left: 180px;
+    margin-top: 2%;
+    background-color: #f0f9ff;
+    padding: 1px;
 }
 
-.register-ant-form-item-3 {
-  margin-left: 100px;
-}
-
-.register-ant-form-item-2 {
-  margin-left: 140px;
-}
-
-.register-ant-form-item-2-1 {
-  margin-left: 160px;
-}
 .register-ant-form-item .ant-time-picker {
-  width: 100%;
+    width: 100%;
 }
 
-.ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
-  background-color: #000;
+.ant-menu.ant-menu-dark .ant-menu-item-selected.menuKey {
+    background-color: #0f4d92;
+}
+
+.menu {
+    margin-top: 10%;
+}
+
+.menu .nav-text {
+    float: left;
+    color: #f0f9ff;
+    font-size: small;
+}
+
+input::placeholder {
+    font-size: 14px;
 }
