--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -77,7 +77,7 @@ body {
 .site-layout-content .login-form {
   max-width: 500px;
   padding: 50px;
-  border: 5px solid #fae596;
+  /* border: 5px solid #fae596; */
   /* margin: 100px; */
   background-color: #fff;
   width: 100%;
@@ -221,7 +221,7 @@ body {
 }
 
 .site-layout-content {
-  background: #3fb0ac;
+    background-color: #fff;
   /* margin-left: 31%; */
   /* margin-top: 10%; */
   display: flex;
