US#221 Task#257 - Deploy on EC2

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -231,6 +231,7 @@ body {
 
 .content-transaction {
     background-color: #0f4d92;
+     height: 84vh;
     padding: 5%;
     text-align: center;
 }
